badge scrollbar needs additional fixing

--- a/src/css/Badges.css
+++ b/src/css/Badges.css
@@ -1,12 +1,16 @@
 .icon-badges {
   display: flex;
+  width: 50%;
+  flex-grow: 1;
   align-items: center;
 }
 
 .badges-container {
   display: flex;
   margin: 0 4rem;
-  flex-grow: 1;
+  align-items: center;
+  /* overflow-y: hidden; */
+  padding: 1rem 0;
 }
 
 .badge {
@@ -20,15 +24,15 @@
   opacity: 0;
   width: 80px;
   color: black;
-  background-color: #fff;
+  background-color: #8b949e;
   text-align: center;
   border-radius: 5px;
-  padding: 5px 0;
-  transition: opacity 1s ease-in-out;
+  padding: 0.5rem;
+  transition: opacity 0.3s ease-in-out;
   position: absolute;
   z-index: 1;
-  left: 0;
-  top: 110%;
+  left: -3rem;
+  top: 115%;
 }
 
 .badge:hover:before {
@@ -43,31 +47,46 @@
   color: #58a6ff;
 }
 
+.badge-modal-background {
+  background-color: rgb(0, 0, 0, 0.3);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
 .badge-modal-content {
+  margin-top: 20%;
   background-color: #fefefe;
   position: absolute;
-  top: 10%;
-  left: 10%;
   padding: 20px;
   border: 1px solid #888;
-  width: 20%;
+  width: 20rem;
   z-index: 1;
 }
 
 .close-badge-modal {
   color: #aaa;
-  float: right;
   font-size: 28px;
   font-weight: bold;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 1rem;
+  cursor: pointer;
 }
 
 .close-badge-modal:hover,
 .close-badge-modal:focus {
-  color: black;
+  color: #e34c26;
   text-decoration: none;
-  cursor: pointer;
 }
 
 .modal-text {
+  text-align: center;
   color: black;
+  margin-top: 1.3rem;
 }
